# docserver

./: .gitignore  Cargo.toml  create-cluster.sh  deploy.sh  deploy.yaml  rust-toolchain.toml
.github/workflows/: rust.yml
docker/: Dockerfile
src/: lib.rs  main.rs  manifest.rs
src/commands/: build.rs  build_release.rs  extract.rs  mod.rs  serve.rs  unzup.rs  zup.rs
src/common/: manifest.rs  mod.rs
src/common/zup/: read.rs  write.rs
src/zup/: layout.rs  mod.rs  read.rs  write.rs
templates/: head.html  nav.html
