[package]
name = "docserver"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
crossbeam = "0.8.2"
hyper = { version = "0.14.26", features = ["full"] }
log = "0.4.18"
memmap2 = "0.5.10"
pretty_env_logger = "0.4.0"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
    "signal",
] }
toml = "0.5.11"
zstd = "0.9.2"
tera = "1"
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive", "env"] }
rand = "0.8.5"
