[package]
name = "docserver"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.99"
crossbeam = "0.8.4"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
log = "0.4.28"
pretty_env_logger = "0.5.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
    "signal",
] }
toml = "0.9.5"
zstd = "0.13.3"
tera = "1"
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive", "env"] }
rand = "0.9.2"
