[package]
name = "docserver"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.102"
crossbeam = "0.8.4"
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
log = "0.4.29"
pretty_env_logger = "0.5.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
    "signal",
] }
toml = "1.1.2"
zstd = "0.13.3"
tera = "1"
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive", "env"] }
rand = "0.10.0"
shell-words = "1.1.1"
blake3 = "1.8.4"
ouroboros = "0.18.5"
